# Proyecto1-BD2

./: .gitignore  AvlFile.h  BPlusFile.h  CMakeLists.txt  README.md  SequentialFile.h  a  bplus.h  bplus2.h  deb  login.txt  main.cpp  methods.h  parserSQL.h  prueba.cpp  prueba2.cpp  prueba3.cpp  prueba4.cpp  prueba5.cpp  prueba6.cpp  prueba_bplus.cpp  sql.sm  struct_generator.h  structs.h  tokenSQL.h
GUI/GUI/: CMakeLists.txt  GUI.qmlproject  Libro1.csv  LoginPage.qml  MainPage.qml  main.qml  resources.qrc
GUI/GUI/content/: Screen01.ui.qml
GUI/GUI/src/: BridgeClass.cpp  BridgeClass.h  CMakeCache.txt  main.cpp
GUI/build-GUI-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  resources.qrc.depends
GUI/build-GUI-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
GUI/build-GUI-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_GUIApp.cmake  Qt6_QmlPlugins_Imports_GUIApp.rsp
GUI/build-GUI-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
GUI/build-GUI-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.rcc/: GUIApp_raw_qml_0.qrc  configuration.qrc  qmake_Main.qrc  qrc_GUIApp_raw_qml_0.cpp  qrc_configuration.cpp  qrc_qmake_Main.cpp  qrc_resources.cpp  resources.qrc
GUI/build-GUI-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/GUIApp_autogen/: deps  mocs_compilation.cpp
GUI/build-GUI-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/content/: cmake_install.cmake
Structures/: AVL.cpp  AVL.h  AVLFile.cpp  AVLFile.h  Record.h  methods.h
(+470 files in other folders)
